--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -1,6 +1,10 @@
 name: Terraform Plan
 
-on: pull_request
+on: 
+  push:
+    branches:
+      - main
+  pull_request:
 
 env:
   TF_WORKSPACE: "terraform-plan-github-action"
@@ -8,7 +12,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   tf_version: "1.8.0"
   tg_version: "0.56.5"
-  working_dir: 'project'
+  working_dir: '.'
 
 jobs:
   terragrunt-terraform:
@@ -46,7 +50,7 @@ jobs:
           tf_version: ${{ env.tf_version }}
           tg_version: ${{ env.tg_version }}
           tg_dir: ${{ env.working_dir }}
-          tg_command: 'run-all fmt init -upgrade'
+          tg_command: 'run-all init -upgrade'
       
       - name: Validate
         uses: gruntwork-io/terragrunt-action@v2
@@ -55,50 +59,4 @@ jobs:
           tf_version: ${{ env.tf_version }}
           tg_version: ${{ env.tg_version }}
           tg_dir: ${{ env.working_dir }}
-          tg_command: 'run-all fmt init -upgrade'
-      
-      # - name: Plan
-      #   uses: gruntwork-io/terragrunt-action@v2
-      #   env:
-      #     # /github/workspace is path in container, aka /home/runner/workspace.. in GHA Runner
-      #     AWS_SHARED_CREDENTIALS_FILE: /github/workspace/.aws/credentials
-      #   id: plan
-      #   with:
-      #     tf_version: ${{ env.tf_version }}
-      #     tg_version: ${{ env.tg_version }}
-      #     tg_dir: ${{ env.working_dir }}
-      #     tg_command: 'run-all fmt init -upgrade'
-      #   run: terraform plan -no-color
-
-      # - name: Update PR
-      #   uses: actions/github-script@v6
-      #   id: plan-comment
-      #   with:
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
-      #     script: |
-      #       const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-      #       #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-      #       #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-      #       <details><summary>Show Plan</summary>
-      #       \`\`\`hcl
-      #       ${process.env.PLAN}
-      #       \`\`\`
-      #       </details>
-      #       **Pusher**: @${{ github.actor }}
-      #       **Action**: ${{ github.event_name }}
-      #       `;
-      #       // Delete previous comment so PR timeline makes sense
-      #       if (botComment) {
-      #         github.rest.issues.deleteComment({
-      #           owner: context.repo.owner,
-      #           repo: context.repo.repo,
-      #           comment_id: botComment.id,
-      #         });
-      #       }
-      #       github.rest.issues.createComment({
-      #         issue_number: context.issue.number,
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         body: output
-      #       });
-
+          tg_command: 'run-all validate'
