--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -7,9 +7,6 @@ on:
   pull_request:
 
 env:
-  TF_WORKSPACE: "terraform-plan-github-action"
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   tf_version: "1.8.0"
   tg_version: "0.56.5"
   working_dir: '.'
@@ -24,6 +21,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+      
+      - name: Configure AWS CLI
+        run: |
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws configure set default.region eu-central-1
+          aws configure set default.output json
 
       - name: Check terragrunt HCL
         uses: gruntwork-io/terragrunt-action@v2
@@ -61,7 +72,7 @@ jobs:
           tg_dir: ${{ env.working_dir }}
           tg_command: 'run-all validate'
       
-      - name: AWS creds
+      - name: Moving AWS creds
         shell: bash
         run: |
           # This will copy our creds to the workspace, which, GitHub will mount to the action's container
