--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -44,16 +44,6 @@ jobs:
           tg_dir: ${{ env.working_dir }}
           tg_command: 'hclfmt --terragrunt-check --terragrunt-diff'
       
-      - name: Format
-        uses: gruntwork-io/terragrunt-action@v2
-        id: fmt
-        with:
-          tf_version: ${{ env.tf_version }}
-          tg_version: ${{ env.tg_version }}
-          tg_dir: ${{ env.working_dir }}
-          tg_command: 'run-all fmt'
-        continue-on-error: true
-      
       - name: Init
         uses: gruntwork-io/terragrunt-action@v2
         id: init
@@ -76,7 +66,7 @@ jobs:
         shell: bash
         run: |
           # This will copy our creds to the workspace, which, GitHub will mount to the action's container
-          cp -r ~/.aws 
+          cp -r ~/.aws /github/workspace/.aws
       
       - name: Plan
         uses: gruntwork-io/terragrunt-action@v2
