--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -66,7 +66,7 @@ jobs:
         shell: bash
         run: |
           # This will copy our creds to the workspace, which, GitHub will mount to the action's container
-          cp -r ~/.aws /github/workspace/.aws
+          cp -r ~/.aws .
       
       - name: Plan
         uses: gruntwork-io/terragrunt-action@v2
