GitHub action. Fixing bot reference

--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -97,6 +97,9 @@ jobs:
             **Pusher**: @${{ github.actor }}
             **Action**: ${{ github.event_name }}
             `;
+            const botComment = comments.find(comment => {
+              return comment.user.type === 'Bot'
+            });
             // Delete previous comment so PR timeline makes sense
             if (botComment) {
               github.rest.issues.deleteComment({
