--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -97,21 +97,9 @@ jobs:
             **Pusher**: @${{ github.actor }}
             **Action**: ${{ github.event_name }}
             `;
-            const botComment = comments.find(comment => {
-              return comment.user.type === 'Bot'
-            });
-            // Delete previous comment so PR timeline makes sense
-            if (botComment) {
-              github.rest.issues.deleteComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: botComment.id,
-              });
-            }
-            github.rest.issues.createComment({
+            github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: output
-            });
-
+            })
