--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -81,8 +81,10 @@ jobs:
           tg_command: 'run-all plan'
 
       - name: Update PR
-        uses: actions/github-script@v6
+        uses: actions/github-script@v3
         id: plan-comment
+        env:
+          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -98,7 +100,7 @@ jobs:
             **Action**: ${{ github.event_name }}
             `;
             github.issues.createComment({
-              issue_number: context.issue.number,
+              issue_number: context.payload.pull_request.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: output
