--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -91,7 +91,7 @@ jobs:
             #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
             <details><summary>Show Plan</summary>
             \`\`\`hcl
-            ${{ steps.plan.outputs.tg_action_output }}
+             ${decodeURIComponent(steps.plan.outputs.tg_action_output)}
             \`\`\`
             </details>
             **Pusher**: @${{ github.actor }}
