--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -2,9 +2,9 @@ name: Terraform Plan
 
 on: 
 #  pull_request:
-#  push:
-#    branches:
-#      - "dev"
+  push:
+    branches:
+      - "dev"
   workflow_dispatch:
     branches: "dev"
 
