--- a/.github/workflows/terrafrom-destroy-on-demand.yaml
+++ b/.github/workflows/terrafrom-destroy-on-demand.yaml
@@ -69,4 +69,5 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@master
         with:
-          args: '${{ steps.destroy.outputs.tg_action_output }}'
+          args: |
+            ${{ steps.destroy.outputs.tg_action_output | trim }}
