GitHub Action. Trying to formatting output v0.2

--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -85,7 +85,7 @@ jobs:
       - name: Decode Terraform Plan
         id: decode-plan
         run: |
-          decoded_output=$(echo "${{ steps.plan.outputs.tg_action_output }}" | sed 's/%0A/\n/g' | sed 's/%3C=/<=/g')
+          decoded_output=$(echo "${{ steps.plan.outputs.tg_action_output }}" | sed 's/%0A/\\n/g' | sed 's/%3C=/<=/g')
           echo "::set-output name=decoded_output::${decoded_output}"
 
       - name: Update PR
