--- a/.github/workflows/terrafrom-destroy-on-demand.yaml
+++ b/.github/workflows/terrafrom-destroy-on-demand.yaml
@@ -66,7 +66,8 @@ jobs:
 
       - name: Decode Terraform output
         id: decode
-        run: |
+        # output from terragrunt docker container is unreadable
+        run: |  
           decoded_output=$(echo "${{ steps.destroy.outputs.tg_action_output }}" | sed 's/%0A/\n/g' | sed 's/%3C=/<=/g')
           echo "::set-output name=decoded_output::${decoded_output}"
       
