--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -1,10 +1,10 @@
 name: Terraform Plan
 
 on: 
-#  pull_request:
-  #push:
-  #  branches:
-  #    - "dev"
+  pull_request:
+  push:
+    branches:
+      - "dev"
   workflow_dispatch:
     branches: "dev"
 
@@ -82,11 +82,13 @@ jobs:
           tg_dir: ${{ env.working_dir }}
           tg_command: 'run-all plan'
       
-      - name: Decode Terraform Plan
-        id: decode-plan
+      - name: Output Cleaning
+        id: clean
         run: |
-          decoded_output=$(echo "${{ steps.plan.outputs.tg_action_output }}" | sed 's/%0A/\n/g' | sed 's/%3C=/<=/g')
-    #      output=$(echo "::set-output name=decoded_output::${decoded_output}")
+          TG_OUT=$(echo '${{ steps.plan.outputs.tg_action_output }}' | sed 's|%0A|\n|g ; s|%3C|<|g')
+          echo "TG_PLAN_OUTPUT<<EOF" >> $GITHUB_ENV
+          echo "${TG_OUT:0:65300}" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
       - name: Update PR
         uses: actions/github-script@v3
@@ -99,7 +101,7 @@ jobs:
             #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
             <details><summary>Show Plan</summary>
             \`\`\`hcl
-            ${{ steps.decode-plan.outputs.decoded_output }}
+            ${{ env.TG_PLAN_OUTPUT }}
             \`\`\`
             </details>
             **Pusher**: @${{ github.actor }}
@@ -121,4 +123,7 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@master
         with:
-          args: '${{ steps.decode-plan.outputs.decoded_output }}'
+          args: |
+            \`\`\`\n
+            ${{ env.TG_PLAN_OUTPUT }}
+            \`\`\`
