--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -1,9 +1,10 @@
 name: Terraform Apply
 
-on: 
-  push:
+on:
+  pull_request:
     branches:
-      - "main"
+      - "dev"
+    types: [closed]
   workflow_dispatch:
     branches: "main"
 
@@ -19,6 +20,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+    if: github.event.pull_request.merged == true
     steps:
       - name: Checkout
         uses: actions/checkout@v3
